Added git command

--- a/solarisonavoton.html
+++ b/solarisonavoton.html
@@ -24,6 +24,9 @@ class: center, middle
 # Solaris 11 Update 3 On Avoton
 Richard Spindler
 
+
+<font size="3"><pre>$ git clone https://github.com/richardatlateralblast/solarisonavoton.git</pre></font>
+
 ---
 
 # Agenda
