Split FreeBSD and Linux

--- a/solarisonavoton.html
+++ b/solarisonavoton.html
@@ -319,6 +319,11 @@ background-image: url(ipmi_sensors.png)
   - Have no patience for Network Manager
 - Supports Ubuntu 12.04 or higher
   - Tried Ubuntu 14.x but it didn't work thus why I thought I'd give Solaris a go
+
+---
+
+# Installing FreeBSD
+
 - Supports FreeBSD 9.1 or higher
   - People are using this board for FreeNAS
   - As previously discussed there are issues with the SATA ports on the Marvell controllers
